[metadata]
name = cistools
author = Caleb Johnson-Cantrell
version = 0.0.1
description = Class Instruction Set (CIS) tools made for CSEE 4290 at UGA
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT


[options]
packages = find:
install_requires =
    Click

[options.entry_points]
console_scripts =
    cistools = cistools.cli:cli
